css/home.css
@import url('https://fonts.googleapis.com/css2?family=Lora:wght@500;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,400;0,700;1,300&display=swap');

/* General CSS */
:root {
    --light-accent-color: #CBD9C4;
    --book-width: calc(18vw * 0.55);
    --book-height: calc(25vw * 0.55);
}

html {
    scroll-behavior: smooth;
    font-size: 10px;
    --min-book-width: calc(18rem * 0.49);
    --min-book-height: calc(25rem * 0.49);
    --max-book-width: calc(18rem * 0.85);
    --max-book-height: calc(25rem * 0.85);
}

#home-main {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.home-section {
    width: 100%;
    box-sizing: border-box;
    margin: max(0.75rem, 0.75vw) 0;
}

.home-section, #contactless-content {
    max-width: calc(60% + 50px);
}

#mobile-section {
    margin: 0;
}

.home-section header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: max(1rem, 1vw) 0;
}

.home-section header .header-part {
    display: flex;
    align-items: center;
}

.home-section header .header-part > * {
    margin-right: max(1.4rem, 1.1vw);
}

.header-text {
    font-family: 'Lora', serif;
    min-height: 0vw;
    font-size: clamp(1.5rem, 2.3vw, 3.4rem);
    font-weight: 700;
    width: fit-content;
    white-space: nowrap;
}

.flat-button {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-decoration: none;
    color: black;
    font-family: 'Lato', sans-serif;
    font-weight: 400;
    min-height: 0vw;
    font-size: clamp(1.1rem, 1.2vw, 2rem);
    padding: min(0.75vw, 0.75rem) min(1.75vw, 1.75rem);
    background: var(--light-accent-color);
    box-shadow: 0.5px 1px 4px rgba(0, 0, 0, 0.25);
    border-color: transparent;
    border-radius: max(20px, 5vw);
    width: fit-content;
}

/* Mobile header CSS */
#mobile-header {
    display: none;
}

#mobile-tabs {
    margin: 0.5rem 0;
    justify-content: space-between;
}

#mobile-tabs .header-text {
    min-height: 0vw;
    font-size: clamp(1.25rem, 1.75vw, 2.25rem);
    cursor: pointer;
    margin-right: 0;
}

/* Descripton heading CSS */
#description-container {
    font-family: 'Lato', sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: max(1.5rem, 1.4vw) 0;
}

#description-text {
    width: clamp(30rem, 57.5vw, 75rem);
    text-align: center;
    font-style: italic;
    font-weight: 400;
    margin: 0 clamp(0.6rem, 1vw, 5rem);
    min-height: 0vw;
    font-size: clamp(1.25rem, 2.6vw, 3.5rem);
}

.bracket {
    width: clamp(0.75rem, 1.75vw, 2.75rem);
    height: auto;
}

/* Carousel CSS */
.carousel {
    display: grid;
    gap: max(4.85vw, 2.85rem);
    grid-auto-flow: column;
    overflow-x: hidden;
}

.carousel-button {
    width: clamp(3.1rem, 3.1vw, 4.5rem);
    height: clamp(3.1rem, 3.1vw, 4.5rem);
    box-shadow: 0.5px 1px 4px rgba(0, 0, 0, 0.25);
    border-radius: max(50px, 5vw);
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.carousel-button img {
    width: clamp(1rem, 1.1vw, 1.2rem);
    height: auto;
}

.left {
    background: #E4DADA;
}

.right {
    background: var(--light-accent-color);
}

.left img {
    transform: rotate(-180deg);
}

/* Book CSS */
.book {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.book-card {
    box-sizing: content-box;
    width: clamp(var(--min-book-width), var(--book-width), var(--max-book-width));
    height: clamp(var(--min-book-height), var(--book-height), var(--max-book-height));
    padding: calc(var(--book-height) * 0.25) calc(var(--book-width) * 0.25);
    background-color: #E6E2DB;
    border-radius: max(40px, 2vw);
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 0 0 auto;
    margin-bottom: max(0.75rem, 0.75vw);
}

.book-card img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    filter: drop-shadow(9px 14px 4px rgba(0, 0, 0, 0.25));
    border-radius: max(20px, 2vw);
}

.book-desc {
    font-family: 'Lato', sans-serif;
    text-align: center;
}

.book-title {
    font-weight: 700;
    min-height: 0vw;
    font-size: clamp(1.2rem, 1.4vw, 3.3rem);
}

.book-price {
    font-weight: 500;
    min-height: 0vw;
    font-size: clamp(1rem, 1.2vw, 2.8rem);
}

/* Contactless section CSS */
#contactless {
    background-color: #E5E2DB;
    max-width: initial;
    height: max-content;
    padding: 5rem 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.contactless-part {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
}

#contactless-content {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    width: 100%;
}

#contactless-buttons {
    display: flex;
}

#contactless-buttons .flat-button {
    margin-right: max(2rem, 2vw);
    white-space: nowrap;
}

#contactless-text {
    width: max(17.5rem, 35vw);
    font-family: 'Lora', serif;
    font-weight: 500;
    min-height: 0vw;
    font-size: clamp(1.3rem, 2.2vw, 3.55rem);
    margin-bottom: max(2rem, 2vw);
}

#contactless-left {
    flex: 1 1 50%;
}

#contactless-right {
    flex: 2 2 50%;
}

.event-container {
    display: flex;
    justify-content: flex-start;
}

#left-event {
    margin-right: min(6.5rem, 5vw);
}

#right-event {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.event {
    border: 2.5px solid black;
    box-sizing: border-box;
    filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.25));
    border-radius: 30px;
}

/* Media queries */
@media screen and (min-width: 2000px) {
    html {
        font-size: 16px;
    }

    .home-section, #contactless-content {
        max-width: calc(55% + 50px);
    }
}

@media screen and (min-width: 2500px) {
    html {
        font-size: 20px;
    }

    .home-section, #contactless-content {
        max-width: calc(50% + 50px);
    }
}

@media screen and (min-width: 3000px) {
    html {
        font-size: 24px;
    }
}

@media screen and (max-width: 600px) {
    .home-section, #contactless-content {
        max-width: calc(70% + 50px);
    }
}

@media screen and (max-width: 488px) {

    .home-section, #contactless-content {
        max-width: calc(80% + 50px);
    }

    .carousel {
        overflow-x: initial;
        grid-auto-flow: unset;
        gap: clamp(2rem, 6vw, 8rem);
        grid-template-columns: repeat(auto-fit, minmax(var(--min-book-width), 1fr));
    }

    .book-card {
        padding: 0;
        background-color: transparent;
    }

    /* Hide all headers except for the one for mobile */
    .home-section header:not(#mobile-header) {
        display: none;
    }

    /* Show the mobile header */
    #mobile-header {
        display: initial;
    }

    /* Utility classes */
    .mobile-hidden {
        display: none;
    }

    .mobile-visible {
        display: block;
    }

    /* Move the contactless section below the events section */
    #contactless {
        order: 1;
    }

    #contactless-text {
        min-height: 0vw;
        font-size: clamp(1.25rem, 2.5vw, 4rem);
    }

    .flat-button {
        padding: 0.5rem 1rem;
        min-height: 0vw;
        font-size: clamp(1rem, 1.5vw, 2.25rem);
    }

    /* CSS for showing active section underline */
    #mobile-tabs > .header-text {
        position: relative;
    }

    #mobile-tabs > .header-text.active:after {
        content: "";
        position: absolute;
        z-index: -1;
        top: 100%;
        width: 4rem;
        padding-bottom: 0.5rem;
        left: 0;
        right: 0;
        bottom: 0;
        margin: auto;
        border-radius: 24px;
        background-color: #748F67;
    }

    .event-container {
        flex-direction: column;
    }

    .event-container img {
        width: 100%;
        margin-bottom: 2rem;
    }

    #left-event {
        margin-right: 0;
    }
}

